ext/mvc/model/query/scanner.c
/* Generated by re2c 0.16 on Mon Aug 29 14:05:38 2016 */
/* #line 1 "scanner.re" */

/*
  +------------------------------------------------------------------------+
  | Phalcon Framework                                                      |
  +------------------------------------------------------------------------+
  | Copyright (c) 2011-2014 Phalcon Team (http://www.phalconphp.com)       |
  +------------------------------------------------------------------------+
  | This source file is subject to the New BSD License that is bundled     |
  | with this package in the file docs/LICENSE.txt.                        |
  |                                                                        |
  | If you did not receive a copy of the license and are unable to         |
  | obtain it through the world-wide-web, please send an email             |
  | to license@phalconphp.com so we can send you a copy immediately.       |
  +------------------------------------------------------------------------+
  | Authors: Andres Gutierrez <andres@phalconphp.com>                      |
  |          Eduar Carvajal <eduar@phalconphp.com>                         |
  +------------------------------------------------------------------------+
*/

#include "php_phalcon.h"

#include "mvc/model/query/scanner.h"

#define YYCTYPE unsigned char
#define YYCURSOR (s->start)
#define YYLIMIT (s->end)
#define YYMARKER q

int phql_get_token(phql_scanner_state *s, phql_scanner_token *token) {

	char *q = YYCURSOR;
	int status = PHQL_SCANNER_RETCODE_IMPOSSIBLE;

	while (PHQL_SCANNER_RETCODE_IMPOSSIBLE == status) {

		
/* #line 40 "scanner.c" */
		{
			YYCTYPE yych;
			unsigned int yyaccept = 0;
			static const unsigned char yybm[] = {
				  0,  48,  48,  48,  48,  48,  48,  48, 
				 48,  49,  49,  48,  48,  49,  48,  48, 
				 48,  48,  48,  48,  48,  48,  48,  48, 
				 48,  48,  48,  48,  48,  48,  48,  48, 
				 49,  48,  32,  48,  48,  48,  48,  16, 
				 48,  48,  48,  48,  48, 240,  48,  48, 
				254, 254, 254, 254, 254, 254, 254, 254, 
				254, 254, 180,  48,  48,  48,  48,  48, 
				 48, 252, 252, 252, 252, 252, 252, 244, 
				244, 244, 244, 244, 244, 244, 244, 244, 
				244, 244, 244, 244, 244, 244, 244, 244, 
				244, 244, 244,  48,   4,  48,  48, 244, 
				 48, 252, 252, 252, 252, 252, 252, 244, 
				244, 244, 244, 244, 244, 244, 244, 244, 
				244, 244, 244, 244, 244, 244, 244, 244, 
				252, 244, 244,  48,  48,  48,  48,  48, 
				 48,  48,  48,  48,  48,  48,  48,  48, 
				 48,  48,  48,  48,  48,  48,  48,  48, 
				 48,  48,  48,  48,  48,  48,  48,  48, 
				 48,  48,  48,  48,  48,  48,  48,  48, 
				 48,  48,  48,  48,  48,  48,  48,  48, 
				 48,  48,  48,  48,  48,  48,  48,  48, 
				 48,  48,  48,  48,  48,  48,  48,  48, 
				 48,  48,  48,  48,  48,  48,  48,  48, 
				 48,  48,  48,  48,  48,  48,  48,  48, 
				 48,  48,  48,  48,  48,  48,  48,  48, 
				 48,  48,  48,  48,  48,  48,  48,  48, 
				 48,  48,  48,  48,  48,  48,  48,  48, 
				 48,  48,  48,  48,  48,  48,  48,  48, 
				 48,  48,  48,  48,  48,  48,  48,  48, 
				 48,  48,  48,  48,  48,  48,  48,  48, 
				 48,  48,  48,  48,  48,  48,  48,  48, 
			};
			yych = *YYCURSOR;
			if (yybm[0+yych] & 1) {
				goto yy6;
			}
			switch (yych) {
			case 0x00:	goto yy2;
			case ' ':
			case '!':	goto yy9;
			case '"':	goto yy11;
			case '%':	goto yy12;
			case '&':	goto yy14;
			case '\'':	goto yy16;
			case '(':	goto yy17;
			case ')':	goto yy19;
			case '*':	goto yy21;
			case '+':	goto yy23;
			case ',':	goto yy25;
			case '-':	goto yy27;
			case '.':	goto yy29;
			case '/':	goto yy31;
			case '0':
			case '1':
			case '2':
			case '3':
			case '4':
			case '5':
			case '6':
			case '7':
			case '8':
			case '9':	goto yy33;
			case ':':	goto yy36;
			case '<':	goto yy38;
			case '=':	goto yy40;
			case '>':	goto yy42;
			case '?':	goto yy44;
			case '@':	goto yy45;
			case 'A':
			case 'a':	goto yy46;
			case 'B':
			case 'b':	goto yy47;
			case 'C':
			case 'c':	goto yy48;
			case 'D':
			case 'd':	goto yy49;
			case 'E':
			case 'e':	goto yy50;
			case 'F':
			case 'f':	goto yy51;
			case 'G':
			case 'g':	goto yy52;
			case 'H':
			case 'h':	goto yy54;
			case 'I':
			case 'i':	goto yy55;
			case 'J':
			case 'j':	goto yy56;
			case 'K':
			case 'M':
			case 'P':
			case 'Q':
			case 'X':
			case 'Y':
			case 'Z':
			case '_':
			case 'k':
			case 'm':
			case 'p':
			case 'q':
			case 'y':
			case 'z':	goto yy57;
			case 'L':
			case 'l':	goto yy59;
			case 'N':
			case 'n':	goto yy60;
			case 'O':
			case 'o':	goto yy61;
			case 'R':
			case 'r':	goto yy62;
			case 'S':
			case 's':	goto yy63;
			case 'T':
			case 't':	goto yy64;
			case 'U':
			case 'u':	goto yy65;
			case 'V':
			case 'v':	goto yy66;
			case 'W':
			case 'w':	goto yy67;
			case '[':	goto yy68;
			case '\\':	goto yy69;
			case '^':	goto yy70;
			case 'x':	goto yy72;
			case '{':	goto yy74;
			case '|':	goto yy75;
			case '~':	goto yy77;
			default:	goto yy4;
			}
yy2:
			++YYCURSOR;
/* #line 542 "scanner.re" */
			{
			status = PHQL_SCANNER_RETCODE_EOF;
			break;
		}
/* #line 182 "scanner.c" */
yy4:
			++YYCURSOR;
yy5:
/* #line 547 "scanner.re" */
			{
			status = PHQL_SCANNER_RETCODE_ERR;
			break;
		}
/* #line 191 "scanner.c" */
yy6:
			++YYCURSOR;
			yych = *YYCURSOR;
			if (yybm[0+yych] & 1) {
				goto yy6;
			}
/* #line 537 "scanner.re" */
			{
			token->opcode = PHQL_T_IGNORE;
			return 0;
		}
/* #line 203 "scanner.c" */
yy9:
			++YYCURSOR;
			if ((yych = *YYCURSOR) == '!') goto yy79;
			if (yych == '=') goto yy81;
/* #line 512 "scanner.re" */
			{
			token->opcode = PHQL_T_NOT;
			return 0;
		}
/* #line 213 "scanner.c" */
yy11:
			yyaccept = 0;
			yych = *(YYMARKER = ++YYCURSOR);
			if (yych <= 0x00) goto yy5;
			goto yy84;
yy12:
			++YYCURSOR;
/* #line 417 "scanner.re" */
			{
			token->opcode = PHQL_T_MOD;
			return 0;
		}
/* #line 226 "scanner.c" */
yy14:
			++YYCURSOR;
			if ((yych = *YYCURSOR) == '&') goto yy89;
/* #line 527 "scanner.re" */
			{
			token->opcode = PHQL_T_BITWISE_AND;
			return 0;
		}
/* #line 235 "scanner.c" */
yy16:
			yyaccept = 0;
			yych = *(YYMARKER = ++YYCURSOR);
			if (yych <= 0x00) goto yy5;
			goto yy92;
yy17:
			++YYCURSOR;
/* #line 437 "scanner.re" */
			{
			token->opcode = PHQL_T_PARENTHESES_OPEN;
			return 0;
		}
/* #line 248 "scanner.c" */
yy19:
			++YYCURSOR;
/* #line 442 "scanner.re" */
			{
			token->opcode = PHQL_T_PARENTHESES_CLOSE;
			return 0;
		}
/* #line 256 "scanner.c" */
yy21:
			++YYCURSOR;
/* #line 407 "scanner.re" */
			{
			token->opcode = PHQL_T_MUL;
			return 0;
		}
/* #line 264 "scanner.c" */
yy23:
			++YYCURSOR;
/* #line 397 "scanner.re" */
			{
			token->opcode = PHQL_T_ADD;
			return 0;
		}
/* #line 272 "scanner.c" */
yy25:
			++YYCURSOR;
/* #line 432 "scanner.re" */
			{
			token->opcode = PHQL_T_COMMA;
			return 0;
		}
/* #line 280 "scanner.c" */
yy27:
			++YYCURSOR;
/* #line 402 "scanner.re" */
			{
			token->opcode = PHQL_T_SUB;
			return 0;
		}
/* #line 288 "scanner.c" */
yy29:
			++YYCURSOR;
			if ((yych = *YYCURSOR) <= '/') goto yy30;
			if (yych <= '9') goto yy94;
yy30:
/* #line 422 "scanner.re" */
			{
			token->opcode = PHQL_T_DOT;
			return 0;
		}
/* #line 299 "scanner.c" */
yy31:
			++YYCURSOR;
/* #line 412 "scanner.re" */
			{
			token->opcode = PHQL_T_DIV;
			return 0;
		}
/* #line 307 "scanner.c" */
yy33:
			++YYCURSOR;
			yych = *YYCURSOR;
			if (yybm[0+yych] & 2) {
				goto yy33;
			}
			if (yych <= 'F') {
				if (yych == '.') goto yy94;
				if (yych >= 'A') goto yy97;
			} else {
				if (yych <= 'f') {
					if (yych >= 'a') goto yy97;
				} else {
					if (yych == 'x') goto yy97;
				}
			}
yy35:
/* #line 41 "scanner.re" */
			{
			token->value = estrndup(q, YYCURSOR - q);
			token->len = YYCURSOR - q;
			if (token->len > 2 && !memcmp(token->value, "0x", 2)) {
				token->opcode = PHQL_T_HINTEGER;
			} else {
				int i, alpha = 0;
				for (i = 0; i < token->len; i++) {
					unsigned char ch = token->value[i];
					if (!((ch >= '0') && (ch <= '9'))) {
						alpha = 1;
						break;
		 			}
				}
				if (alpha) {
					token->opcode = PHQL_T_IDENTIFIER;
				} else {
					token->opcode = PHQL_T_INTEGER;
				}
			}
			q = YYCURSOR;
			return 0;
		}
/* #line 349 "scanner.c" */
yy36:
			yyaccept = 1;
			yych = *(YYMARKER = ++YYCURSOR);
			if (yybm[0+yych] & 64) {
				goto yy99;
			}
yy37:
/* #line 427 "scanner.re" */
			{
			token->opcode = PHQL_T_COLON;
			return 0;
		}
/* #line 362 "scanner.c" */
yy38:
			++YYCURSOR;
			if ((yych = *YYCURSOR) <= '<') goto yy39;
			if (yych <= '=') goto yy101;
			if (yych <= '>') goto yy103;
yy39:
/* #line 467 "scanner.re" */
			{
			token->opcode = PHQL_T_LESS;
			return 0;
		}
/* #line 374 "scanner.c" */
yy40:
			++YYCURSOR;
/* #line 477 "scanner.re" */
			{
			token->opcode = PHQL_T_EQUALS;
			return 0;
		}
/* #line 382 "scanner.c" */
yy42:
			++YYCURSOR;
			if ((yych = *YYCURSOR) == '=') goto yy105;
/* #line 472 "scanner.re" */
			{
			token->opcode = PHQL_T_GREATER;
			return 0;
		}
/* #line 391 "scanner.c" */
yy44:
			yych = *++YYCURSOR;
			if (yych <= '/') goto yy5;
			if (yych <= '9') goto yy107;
			goto yy5;
yy45:
			yych = *++YYCURSOR;
			if (yych == '>') goto yy110;
			if (yych == '@') goto yy112;
			goto yy5;
yy46:
			yych = *++YYCURSOR;
			switch (yych) {
			case 'G':
			case 'g':	goto yy114;
			case 'L':
			case 'l':	goto yy115;
			case 'N':
			case 'n':	goto yy116;
			case 'S':
			case 's':	goto yy117;
			default:	goto yy73;
			}
yy47:
			yych = *++YYCURSOR;
			if (yych <= 'Y') {
				if (yych == 'E') goto yy119;
				if (yych <= 'X') goto yy73;
				goto yy120;
			} else {
				if (yych <= 'e') {
					if (yych <= 'd') goto yy73;
					goto yy119;
				} else {
					if (yych == 'y') goto yy120;
					goto yy73;
				}
			}
yy48:
			yych = *++YYCURSOR;
			if (yych <= 'R') {
				if (yych <= 'N') {
					if (yych == 'A') goto yy122;
					goto yy73;
				} else {
					if (yych <= 'O') goto yy123;
					if (yych <= 'Q') goto yy73;
					goto yy124;
				}
			} else {
				if (yych <= 'n') {
					if (yych == 'a') goto yy122;
					goto yy73;
				} else {
					if (yych <= 'o') goto yy123;
					if (yych == 'r') goto yy124;
					goto yy73;
				}
			}
yy49:
			yych = *++YYCURSOR;
			if (yych <= 'I') {
				if (yych == 'E') goto yy125;
				if (yych <= 'H') goto yy73;
				goto yy126;
			} else {
				if (yych <= 'e') {
					if (yych <= 'd') goto yy73;
					goto yy125;
				} else {
					if (yych == 'i') goto yy126;
					goto yy73;
				}
			}
yy50:
			yych = *++YYCURSOR;
			if (yych <= 'X') {
				if (yych <= 'M') {
					if (yych == 'L') goto yy127;
					goto yy73;
				} else {
					if (yych <= 'N') goto yy128;
					if (yych <= 'W') goto yy73;
					goto yy129;
				}
			} else {
				if (yych <= 'm') {
					if (yych == 'l') goto yy127;
					goto yy73;
				} else {
					if (yych <= 'n') goto yy128;
					if (yych == 'x') goto yy130;
					goto yy73;
				}
			}
yy51:
			yych = *++YYCURSOR;
			if (yych <= 'U') {
				if (yych <= 'O') {
					if (yych == 'A') goto yy131;
					if (yych <= 'N') goto yy73;
					goto yy132;
				} else {
					if (yych == 'R') goto yy133;
					if (yych <= 'T') goto yy73;
					goto yy134;
				}
			} else {
				if (yych <= 'o') {
					if (yych == 'a') goto yy131;
					if (yych <= 'n') goto yy73;
					goto yy132;
				} else {
					if (yych <= 'r') {
						if (yych <= 'q') goto yy73;
						goto yy133;
					} else {
						if (yych == 'u') goto yy134;
						goto yy73;
					}
				}
			}
yy52:
			++YYCURSOR;
			if ((yych = *YYCURSOR) == 'R') goto yy135;
			if (yych == 'r') goto yy135;
			goto yy58;
yy53:
/* #line 370 "scanner.re" */
			{
			token->opcode = PHQL_T_IDENTIFIER;
			if ((YYCURSOR - q) > 1) {
				if (q[0] == '\\') {
					token->value = estrndup(q + 1, YYCURSOR - q - 1);
					token->len = YYCURSOR - q - 1;
				} else {
					token->value = estrndup(q, YYCURSOR - q);
					token->len = YYCURSOR - q;
				}
			} else {
				token->value = estrndup(q, YYCURSOR - q);
				token->len = YYCURSOR - q;
			}
			q = YYCURSOR;
			return 0;
		}
/* #line 538 "scanner.c" */
yy54:
			yych = *++YYCURSOR;
			if (yych == 'A') goto yy136;
			if (yych == 'a') goto yy136;
			goto yy58;
yy55:
			yych = *++YYCURSOR;
			if (yych <= 'S') {
				if (yych <= 'M') {
					if (yych == 'L') goto yy137;
					goto yy58;
				} else {
					if (yych <= 'N') goto yy138;
					if (yych <= 'R') goto yy58;
					goto yy140;
				}
			} else {
				if (yych <= 'm') {
					if (yych == 'l') goto yy137;
					goto yy58;
				} else {
					if (yych <= 'n') goto yy138;
					if (yych == 's') goto yy140;
					goto yy58;
				}
			}
yy56:
			yych = *++YYCURSOR;
			if (yych == 'O') goto yy142;
			if (yych == 'o') goto yy142;
			goto yy58;
yy57:
			++YYCURSOR;
			yych = *YYCURSOR;
yy58:
			if (yybm[0+yych] & 4) {
				goto yy57;
			}
			goto yy53;
yy59:
			yych = *++YYCURSOR;
			if (yych <= 'I') {
				if (yych == 'E') goto yy143;
				if (yych <= 'H') goto yy58;
				goto yy144;
			} else {
				if (yych <= 'e') {
					if (yych <= 'd') goto yy58;
					goto yy143;
				} else {
					if (yych == 'i') goto yy144;
					goto yy58;
				}
			}
yy60:
			yych = *++YYCURSOR;
			if (yych <= 'U') {
				if (yych == 'O') goto yy145;
				if (yych <= 'T') goto yy58;
				goto yy146;
			} else {
				if (yych <= 'o') {
					if (yych <= 'n') goto yy58;
					goto yy145;
				} else {
					if (yych == 'u') goto yy146;
					goto yy58;
				}
			}
yy61:
			yych = *++YYCURSOR;
			if (yych <= 'U') {
				if (yych <= 'N') {
					if (yych == 'F') goto yy147;
					if (yych <= 'M') goto yy58;
					goto yy148;
				} else {
					if (yych == 'R') goto yy150;
					if (yych <= 'T') goto yy58;
					goto yy152;
				}
			} else {
				if (yych <= 'n') {
					if (yych == 'f') goto yy147;
					if (yych <= 'm') goto yy58;
					goto yy148;
				} else {
					if (yych <= 'r') {
						if (yych <= 'q') goto yy58;
						goto yy150;
					} else {
						if (yych == 'u') goto yy152;
						goto yy58;
					}
				}
			}
yy62:
			yych = *++YYCURSOR;
			if (yych == 'I') goto yy153;
			if (yych == 'i') goto yy153;
			goto yy58;
yy63:
			yych = *++YYCURSOR;
			if (yych == 'E') goto yy154;
			if (yych == 'e') goto yy154;
			goto yy58;
yy64:
			yych = *++YYCURSOR;
			if (yych <= 'R') {
				if (yych == 'H') goto yy155;
				if (yych <= 'Q') goto yy58;
				goto yy156;
			} else {
				if (yych <= 'h') {
					if (yych <= 'g') goto yy58;
					goto yy155;
				} else {
					if (yych == 'r') goto yy156;
					goto yy58;
				}
			}
yy65:
			yych = *++YYCURSOR;
			if (yych <= 'S') {
				if (yych == 'P') goto yy157;
				if (yych <= 'R') goto yy58;
				goto yy158;
			} else {
				if (yych <= 'p') {
					if (yych <= 'o') goto yy58;
					goto yy157;
				} else {
